@@ -1,6 +1,9 @@
 0.9:
   For stopped services, minit did not record the time when it finished,
     but when it was started.
+  add hard-reboot from Tommi Virtanen.  He also asked me to include an
+    explicit license statement and sent a patch to make debian packaging
+    easier (deb files can't include FIFOs).
 
 0.8:
   call waitpid repeatedly until it returns "no children".
